[package]
name = "komitto"
version = "0.1.5"
edition = "2021"
authors = ["jalever <jalever@gmail.com>"]
description = "AI-powered Conventional Commit Message Generator for Git"
repository = "https://github.com/tsukuricase/komitto"
homepage = "https://github.com/tsukuricase/komitto"
license = "MIT"
readme = "README.md"
categories = [
    "command-line-utilities",
    "development-tools",
]
keywords = ["git", "commit", "ai", "openai", "cli"]

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.17"
dirs = "5.0"
